[ParkingLot][Nicole] -feat: should_park_to_second_parking_lot_when_park_car_given_standard_parking_boy_manage_two_parking_lots_both_available passsed