@@ -7,7 +7,6 @@ import com.parkinglot.objects.Ticket;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -18,7 +17,7 @@ public class ParkingBoyTest {
     void should_return_ticket_when_park_car_given_standard_parking_boy_manage_one_parking_lot_and_car() {
         //given
         ParkingLot parkingLot = new ParkingLot();
-        ParkingBoy parkingBoy = new ParkingBoy((ArrayList<ParkingLot>)Arrays.asList(parkingLot));
+        ParkingBoy parkingBoy = new ParkingBoy(new ArrayList<>(List.of(parkingLot)));
 
         //when
         Ticket ticket = parkingBoy.park(new Car());
@@ -32,7 +31,7 @@ public class ParkingBoyTest {
         //given
         ParkingLot parkingLot1 = new ParkingLot();
         ParkingLot parkingLot2 = new ParkingLot();
-        ParkingBoy parkingBoy = new ParkingBoy((ArrayList<ParkingLot>)Arrays.asList(parkingLot1, parkingLot2));
+        ParkingBoy parkingBoy = new ParkingBoy(new ArrayList<>(List.of(parkingLot1, parkingLot2)));
 
         //when
         Ticket ticket = parkingBoy.park(new Car());
@@ -42,5 +41,26 @@ public class ParkingBoyTest {
         assertEquals(9, parkingLot1.getAvailablePosition());
         assertEquals(10, parkingLot2.getAvailablePosition());
     }
+
+    @Test
+    void should_park_to_second_parking_lot_when_park_car_given_standard_parking_boy_manage_two_parking_lots_both_available() {
+        //given
+        ParkingLot parkingLot1 = new ParkingLot();
+        ParkingLot parkingLot2 = new ParkingLot();
+        ParkingBoy parkingBoy = new ParkingBoy(new ArrayList<>(List.of(parkingLot1, parkingLot2)));
+
+        //when
+        while (parkingLot1.getAvailablePosition() > 0) {
+            parkingBoy.park(new Car());
+        }
+        Ticket ticket = parkingBoy.park(new Car());
+
+        //then
+        assertNotNull(ticket);
+        assertEquals(0, parkingLot1.getAvailablePosition());
+        assertEquals(9, parkingLot2.getAvailablePosition());
+    }
+
+
 
 }
